--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -13,7 +13,7 @@
     /><br /><br />
     <div
       class="g-recaptcha"
-      data-sitekey="6LflLRIqAAAAAHrbmeUx3WThRxp7On8iAQQOIQWH"
+      data-sitekey="<%= recaptchaSiteKey %>"
     ></div>
     <button
       type="submit"
